[gd_scene load_steps=7 format=2]

[ext_resource path="res://kenney_pixelplatformer/Tilemap/characters_packed.png" type="Texture" id=1]
[ext_resource path="res://Character/PinkPlayer.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4, 5 ]
}

[sub_resource type="CapsuleShape2D" id=4]
height = 6.0

[node name="PinkPlayer" type="KinematicBody2D"]
position = Vector2( 0, -12 )
script = ExtResource( 2 )

[node name="PinkPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/jump = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.32196, 1.28783 )
scale = Vector2( 0.991057, 1.32196 )
texture = ExtResource( 1 )
vframes = 3
hframes = 9
frame = 4
region_enabled = true
region_rect = Rect2( 0, 0, 216, 73 )

[node name="FlipTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
[connection signal="timeout" from="FlipTimer" to="." method="_on_FlipTimer_timeout"]
